fl#valid_tests/tests/invalid/spl.tpa
DEFINE_ACTION_FUNCTION fl#valid_tests#tests#invalid#spl
  RET
    success
    fail
BEGIN
  OUTER_SPRINT file_root "%MOD_FOLDER%/tests/invalid/spl"

  ACTION_DEFINE_ASSOCIATIVE_ARRAY invalid#spl BEGIN
    "nosig" => "SPL with erased signature"
    "nover" => "SPL with erased version"
    "splv10" => "SPL with incorrect V1.0 version"
    "dmghd" => "SPL with damaged header"
    "wrngoff" => "Plain SPL with 0x30 deducted off the effect offset"
  END

  ACTION_PHP_EACH invalid#spl AS file => desc BEGIN
    LAF test_invalid STR_VAR file = EVAL "%file_root%/%file%.spl" desc RET success fail END
  END
END

LAF fl#valid_tests#tests#invalid#spl RET success fail END
